# molecule_schema

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  assumptions.md  devlog.md  readme.md
base_types/: Cargo.toml
base_types/src/: common.rs  constraint_schema.rs  constraint_schema_item.rs  lib.rs  locked_field_digest.rs  operative_digest.rs  primitives.rs  to_token_impls.rs  trait_impl_digest.rs  traits.rs  traits_backup.rs  utils.rs
base_types/src/post_generation/: blueprint.rs  mod.rs  non_reactive.rs  reactive.rs  tests.rs  type_level.rs
base_types/src/traits/: blueprint.rs  mod.rs  reactive.rs  tests.rs
base_types/src/utils/: mod.rs
base_types/tests/: traits_tests.rs
constraint_schema/: Cargo.toml
constraint_schema/resources/: backup_schema.json  backup_schema_2.json  schema.json
constraint_schema/src/: lib.rs
constraint_schema/tests/: test_macro.rs
first_generation_compiler/: Cargo.toml
first_generation_compiler/src/: generate_operative_streams.rs  generate_trait_impl_streams.rs  lib.rs  lib_backup.rs  utils.rs
first_generation_compiler/tests/: test_macro.rs
generate_schema/: Cargo.toml
generate_schema/src/: generate_operative_streams.rs  generate_trait_impl_streams.rs  lib.rs  utils.rs
generate_schema/tests/: test_macro.rs
generate_schema_macro/: Cargo.toml
generate_schema_macro/resources/: schema.json
generate_schema_macro/src/: lib.rs
generate_schema_macro/tests/: test_macro.rs
generate_schema_reactive/: Cargo.toml
generate_schema_reactive/src/: generate_operative_streams.rs  generate_trait_impl_streams.rs  lib.rs  output_traits.rs  utils.rs
generate_schema_reactive/src/output_traits/: mod.rs  output_tests.rs
generate_schema_reactive/tests/: test_macro.rs
molecule_core/: Cargo.toml
molecule_core/src/: lib.rs
molecule_schema/: Cargo.toml  index.html  styles.css
molecule_schema/src/: common.rs  constraint.rs  constraint2.rs  constraint_schema.rs  lib.rs  main.rs  prelude.rs  styles.css  test.rs
molecule_schema/src/components/: app.rs  edit_schema_object.rs  mod.rs  tree_view.rs  tree_view_revamp.rs
molecule_schema/src/components/common/: button_show.rs  mod.rs  select_input.rs  text_input.rs  text_input_2.rs
molecule_schema/src/components/configure_schema_object/: edit_operative.rs  edit_template.rs  edit_trait.rs  mod.rs
molecule_schema/src/generated_schema/: mod.rs  test.rs  utils.rs
molecule_schema/src/utils/: locked_field_digest.rs  mod.rs  operative_digest.rs  reactive_item.rs  reactive_types.rs  trait_impl_digest.rs
molecule_types/: Cargo.toml
molecule_types/src/: lib.rs
neo4j_pipeline/: Cargo.toml  build.rs  json_to_pipe.json
neo4j_pipeline/src/: main.rs  save_graph.rs
output_types/: Cargo.toml
output_types/src/: lib.rs
primitive_schema_editor/: Cargo.toml
primitive_schema_editor/src/: lib.rs  main.rs
primitive_schema_editor/src/components/: app.rs  tree_view.rs
primitive_schema_editor/src/components/common/: button_show.rs  mod.rs  select_input.rs  text_input.rs
primitive_schema_editor/src/components/configure_schema_object/: edit_instance.rs  edit_operative.rs  edit_template.rs  edit_trait.rs  mod.rs
primitive_schema_editor/src/reactive_types/: from_impls.rs  mod.rs  operative_digest.rs  reactive_item.rs
reactive_types/: Cargo.toml
reactive_types/src/: from_impls.rs  lib.rs  locked_field_digest.rs  operative_digest.rs  reactive_item.rs  reactive_types.rs  trait_impl_digest.rs
resources/: backup_schema.json  backup_schema2.json  empty_schema.json  initial_schema_editor_data.json  neo4j_creation_example.rs  recursive_schema.json  recursive_schema_backup.json  recursive_schema_backup_3.json  schema.json  wip.json
schema_editor/: Cargo.toml  build.rs  index.html
schema_editor/src/: main.rs  styles.css
schema_editor/src/components/: app.rs  common.rs  control_panel.rs  editing_space.rs  function_definition_editor.rs  function_implementation_builder.rs  function_implementation_editor.rs  graph_editor.rs  instance_editor.rs  main_list.rs  method_impl_builder.rs  method_impl_step_builder.rs  method_impl_traversal_utils.rs  method_impl_utils.rs  method_implementation_builder.rs  mod.rs  operative_editor.rs  operative_function_implementations.rs  operative_lineage.rs  operative_method_implementations.rs  operative_slot_cardinality_specialization_section.rs  operative_slot_section.rs  operative_slot_type_specialization_section.rs  operative_trait_implementations.rs  slot_builder.rs  slot_cardinality_specialization_builder.rs  slot_cardinality_specialization_lineage.rs  slot_type_specialization_builder.rs  slot_type_specialization_lineage.rs  specialization_builder.rs  specialization_lineage.rs  template_editor.rs  trait_editor.rs  utils.rs  workspace.rs
second_generation_compiler/: Cargo.toml  build.rs
serde_types/: Cargo.toml
serde_types/src/: common.rs  constraint_schema.rs  constraint_schema_item.rs  lib.rs  locked_field_digest.rs  operative_digest.rs  primitives.rs
to_composite_id_macro/: Cargo.toml
to_composite_id_macro/src/: lib.rs
type_map_macro/: Cargo.toml
type_map_macro/src/: lib.rs  types.rs
