# cargo-features = ["codegen-backend"]
[workspace]
resolver = "2"
members = [
    "primitive_schema_editor",
    "first_generation_compiler",
    # "second_generation_compiler",
    "base_types",
    "to_composite_id_macro",
    "molecule_core",
    "schema_editor",
    "neo4j_pipeline",
]

[workspace.dependencies]
# leptos = {version = "0.7.0-rc0", features= ["csr"] }
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "main", features = [
    "csr",
] }


[workspace.dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js",
]

[profile.dev]
opt-level = 0      # Low optimization for default crates
debug = 2
incremental = true

# High optimization for dependencies (crates you don't change often)
[profile.dev.package.schema_editor_generated_toolkit]
opt-level = 0
debug = 1

# High optimization for dependencies (crates you don't change often)
[profile.dev.package."*"]
opt-level = 3
debug = 1

# Minimal optimization for build dependencies
[profile.dev.build-override]
opt-level = 0
debug = 1
