[package]
name = "base_types"
version = "0.1.0"
edition = "2021"

[features]
serde = ["serde/derive", "serde_json"]
to_tokens = ["proc-macro2", "quote"]
reactive = ["leptos"]

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
serde = { version = "1", features = [
  "derive",
], optional = true } # reactive_types = { path = "../reactive_types/" }
serde_json = { version = "1", optional = true }
strum = "0.26.1"
strum_macros = "0.26.1"
validator = { version = "0.18", features = ["derive"] }
anyhow = "1.0"
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
leptos = { version = "0.6", features = [], optional=true }
