[package]
name = "constraint_schema"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
serde_types = { path = "../serde_types/" }
output_types = { path = "../output_types/" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
