[package]
name = "constraint_schema"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
base_types = { path = "../base_types/", features = ["serde"] }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
