[package]
name = "generate_schema_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
generate_schema_macro = { path = "../generate_schema_macro/" }

[dependencies]
# molecule_schema = { path = "../molecule_schema" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_types = { path = "../serde_types" }
