[package]
name = "generate_schema_reactive"
version = "0.1.0"
edition = "2021"

# [lib]
# proc-macro = true

[dev-dependencies]
generate_schema_reactive = { path = "../generate_schema_reactive/" }

[dependencies]
uuid = {workspace = true}
to_composite_id_macro = {path = "../to_composite_id_macro"}
base_types = { path = "../base_types", features = [
    "to_tokens",
    # "reactive",
] } # molecule_schema = { path = "../molecule_schema" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reactive_types = { path = "../reactive_types" }
# anyhow = "1.0"
lazy_static = "1.4"
# leptos = { version = "0.6", features = ["csr"] }
leptos = {workspace = true}
typenum = "1"
