
[package]
name = "molecule_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
im = "15.1.0"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
serde_types = { path = "../serde_types" }
constraint_schema = { path = "../constraint_schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leptonic = "0.5.0"
# web-sys = { version = "1" }

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
