
[package]
name = "molecule_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {workspace = true}
console_error_panic_hook = "0.1.7"
reactive_types = { path = "../reactive_types/" }
im = "15.1.0"
# leptos = { version = "0.6", features = ["csr"] }
leptos = {workspace = true}
base_types = { path = "../base_types", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# leptonic = "0.5.0"
strum = "0.26.1"
strum_macros = "0.26.1"
# web-sys = { version = "1" }
