[package]
name = "neo4j_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# ratatui = "0.28.0"
http = "1"
neo4rs = { version = "0.7" }
base_types = { path = "../base_types", features = ["serde"] }
lazy_static = "1.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = "1"
neo4j_pipeline_generated_toolkit = { path = "target/neo4j_pipeline_generated_toolkit" }
tokio = { version = "1", features = ["rt-multi-thread", "full"] }

[build-dependencies]
first_generation_compiler = { path = "../../molecule_schema/first_generation_compiler" }
