[package]
name = "output_types"
version = "0.1.0"
edition = "2021"

# [dependencies.uuid]
# version = "1.4.1"
# features = [
#   "v4",                # Lets you generate random UUIDs
#   "fast-rng",          # Use a faster (but still sufficiently random) RNG
#   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]

# [dependencies]
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
