[package]
name = "reactive_types"
version = "0.1.0"
edition = "2021"


[dependencies]
uuid = {workspace = true}
base_types = { path = "../base_types", features = ["serde"] }
# leptos = { version = "0.6", features = ["csr"] }
leptos = {workspace = true}
strum = "0.26.1"
strum_macros = "0.26.1"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
