
[package]
name = "schema_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.7"
generated_crate = { path = "target/generated_crate" }
leptos = { workspace = true }
web-sys = { version = "*", features = ["HtmlElement"] }

serde = { version = "1" }
serde_json = "1"

# thaw = { git = "https://github.com/thaw-ui/thaw", features = ["csr, nightly"] }
# thaw = { version="0.4.0-beta4", features = ["csr"] }
# thaw = { path="../../thaw/thaw", features = ["csr"] }

# generated in other crate

# to_composite_id_macro = { path = "../../molecule_schema/to_composite_id_macro" }
# molecule_core = { path = "../../molecule_schema/molecule_core" }
# lazy_static = "1.4"
# uuid = { workspace = true }
# strum = "0.26.1"
# strum_macros = "0.26.1"
# base_types = { path = "../base_types", features = ["serde"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# reactive_types = { path = "../reactive_types/" }


[build-dependencies]
generate_schema_reactive = { path = "../../molecule_schema/generate_schema_reactive" }
